--- a/AppsFrontend/src/app/layout/chat-bot/chat-bot.component.html
+++ b/AppsFrontend/src/app/layout/chat-bot/chat-bot.component.html
@@ -3,7 +3,7 @@
     <!-- <p> Lorem Ipsum simply dummy text of the file </p> -->
     <div class="chat-bot-box">
         <img src="assets/images/chatbot-mall.jpg" class="chat-img" />
-        <iframe class="iframe" src='https://webchat.botframework.com/embed/FinAssistant-Bot?s=B5AwI8H7DWU.cwA.JpU.qovZ0z4WXIXGlbMjMGgnl3mfh0bIhSyjWI8I1NOL2t8'></iframe>
+        <iframe class="iframe" src='https://webchat.botframework.com/embed/Assistant-Bot?s=scvObHOrNQs.cwA.25E.YF4j1U_TVAzdGzShcaEBxQQ19P7qQYEwGn0y4KeRLwg'></iframe>
     </div>
 </div>
 </section>
