facial recoginition page added

--- a/AppsFrontend/src/app/layout/dashboard/basic.component.html
+++ b/AppsFrontend/src/app/layout/dashboard/basic.component.html
@@ -122,6 +122,9 @@
                 <li> Recommender Systems for a <a href="#" class="no-link"> Retailer </a>  </li>
                 <li> Predictive Maintenance for an  <a href="#" class="no-link"> Energy Company </a>  </li>
                 <li> <a href="http://192.168.0.51:3000/" target="_blank"> Automated Software Testing </a> for a Software Products Development Company </li>
+                <li> Propriety AI Algorithm based  <a  target="_blank" [routerLink]="['/facialrecognition']" href="javascript:void(0)">
+                    Facial Recognition Solutions </a>
+                </li>
             </ul>
           </div>
         </ng-template>
